--- a/src/main.css
+++ b/src/main.css
@@ -50,6 +50,7 @@ h1 h2 h3 h4 h5 h6 {
   max-width: 1140px;
   position: relative;
   padding: 0 30px;
+  box-sizing: border-box;
 }
 .d-flex {
   display: flex;
