feat: adicionando componentes as paginas

--- a/src/main.css
+++ b/src/main.css
@@ -18,7 +18,7 @@ a {
   background-color: #0c70f0f2;
 }
 .primary-color {
-  background-color: #0c70f0f2;
+  color: #0c70f0f2;
 }
 .secundary-background {
   background-color: #1d1d1d;
